@@ -650,3 +650,4 @@ table.insert(tests, "diff_output_formats")
 table.insert(tests, "pluck_lifecycle")
 table.insert(tests, "pluck_restricted")
 table.insert(tests, "revert_--missing_in_subdir")
+table.insert(tests, "restrictions_with_renames_and_adds")
