@@ -1,5 +1,10 @@
 2006-07-13  Nathaniel Smith  <njs@pobox.com>
 
+	* tests/restrictions_with_renames_and_adds/: Tests for bugs in
+	check_restricted_cset.
+
+2006-07-13  Nathaniel Smith  <njs@pobox.com>
+
 	* tester.lua, tester.txt: Add plain 'xfail' convenience function.
 	* tests/revert_--missing_in_subdir/: A bunch of revert --missing
 	tests.
